# ramblers-salesforce-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  eslint.config.ts  fly.toml  package.json  pnpm-lock.yaml
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  deploy.yml
python/: .gitignore  CLAUDE.md  CONFIGURATION.md  README.md  local.settings.json.example  pyproject.toml  requirements-dev.txt  requirements.txt
python/app/: auth.py  config.py  errors.py  factory.py  main.py  member_provider.py  models.py  openapi_info.py
python/app/api/: health.py  members.py
python/app/overlay/: azure_table.py  memory.py  store.py
python/app/providers/: hybrid_member_provider.py
python/app/sources/: base.py  salesforce.py  synthetic.py
python/infra/: azure-setup.sh  entra-setup.sh  keyvault-setup.sh  main.bicep
python/tests/: test_api.py  test_contract_conformance.py  test_contract_shape.py  test_hybrid.py
src/: config.ts  logger.ts  server.ts
src/api/: async-handler.ts  errors.ts  members.router.ts  openapi.ts
src/providers/: salesforce-member-provider.ts
tools/: setup-git-hooks.sh
typescript/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/: server.ts
typescript/src/api/: health.router.ts
typescript/src/auth/: bearer-auth.ts
typescript/src/providers/: salesforce-member-provider.ts
typescript/src/salesforce/: connection.ts
typescript/tools/: setup-git-hooks.sh
